2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindow.cs: Cleaned up calls to handle all conversations

2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Application.cs: Added call to init the ChatWIndowManager when
	  the app launches

2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindowManager.cs: Changed peerID to be a uint from a
	  ProviderUser
	* Banter/ChatWindow.cs: Removed calls that used to manage chat windows
	* Banter/PersonCard.cs: Changed calls to be into ChatWindowManager
	  instead of Application

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: Removed code that calls ChatWindow
	* Banter/ConversationManager.cs: fixed up the events to pass the
	  ChatType

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/AccountManagement.cs: new method to get account by name
	* Banter/ConversationManager.cs: use new method for initiating and
	  added a method to add a conversation to the list
	* Banter/Conversation.cs: new constructor for initiating

2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: 
	
	  Added ChatWindowManager and ChatType
	* Banter/ChatType.cs: New Enum to define types of chat
	* Banter/ChatWindowManager.cs: New Class to manage all chat windows
	* Banter/Application.cs: Removed InitiateChat calls and moved them into
	  ChatWindowManager
	* Banter/Person.cs: Added default ProviderUser property
	* Banter/ChatWindow.cs: Removed old constructor that took a
	  conversation object
	* Banter/Makefile.am: Added ChatType and ChatWindowManager files to
	  make

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/AccountManagement.cs: Added OnIncomingConversation event and
	  matching delegate

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Conversation.cs: added new properties, events and methods 

2007-06-06  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Application.cs: Fixed lagging references to VideoWindow
