@@ -1,3 +1,10 @@
+2007-06-07  Brady Anderson <brady.anderson@gmail.com> 
+
+	* Banter/Account.cs: added call back into ConversationManager for
+	  incoming conversations
+	* Banter/ConversationManager.cs: handled new channel callback
+	* Banter/Conversation.cs: new constructors for incoming
+
 2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter/ChatWindow.cs: Cleaned up calls to handle all conversations
